Fix content overflow in pre tags
Use an auto overflow rather than a visible one so long lines
doesn't overflow the pre but are still visible by scrolling.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -262,7 +262,7 @@ a.feed {
 	-o-transition: width 1s ease-out;
 }
 .post-content pre:hover {
-	overflow: visible;
+	overflow-x: auto;
   border-right: solid 1px #cccccc;
   width: 730px;
 }
